tests/fail/grid_concat_mismatch.msh
# Strict-by-name matching: differing column sets error with a diff.
[| name, age; "Alice", 30 |] g1!
[| name, city; "Bob", "NYC" |] g2!
@g1 @g2 + r!
